# create-cohere-connector

./: .gitignore  README.md  pyproject.toml  setup.py
_templates_/: README.md.jinja  app.py.jinja  client.py.jinja  env_template.jinja  project_template.py.jinja
connector/: scaffold.py
create_cohere_connector/: cli.py  scaffold.py
create_cohere_connector/_templates_/: client.py.jinja  datamodels.py.jinja  env_template.jinja  project_template.py.jinja
templates/: README.md.jinja  deploy_template.py.jinja  project_template.py.jinja
tests/: test_scaffold.py
