[tool.poetry]
name = "cohere-connector-box"
version = "0.1.0"
description = "Scaffold a custom Cohere connector"
authors = ["dcarpintero"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
