[tool.poetry]
name = "create-cohere-connector"
version = "0.1.3"
description = "Scaffold a custom Cohere connector"
authors = ["dcarpintero"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.3"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-cohere-connector = "create_cohere_connector.cli:main"
